--- a/students/src/main/java/io/openliberty/deepdive/rest/postgres/postgres.yaml
+++ b/students/src/main/java/io/openliberty/deepdive/rest/postgres/postgres.yaml
@@ -10,13 +10,13 @@ data:
     \c students;
 
     CREATE TABLE Student (
-                                id SERIAL,
-                                name varchar(50),
-                                email varchar(50),
-                                grade varchar(50),
-                                role varchar(50),
-                                password varchar(50),
-                                primary key(id)
+                            id SERIAL,
+                            name varchar(50),
+                            email varchar(50),
+                            grade varchar(50),
+                            dormitory varchar(50),
+                            room varchar(50),
+                            primary key(id)
     );
 
     CREATE SEQUENCE student_id
