--- a/students/src/main/java/io/openliberty/deepdive/rest/postgres/postgres.yaml
+++ b/students/src/main/java/io/openliberty/deepdive/rest/postgres/postgres.yaml
@@ -23,6 +23,19 @@ data:
         START 1
         INCREMENT 1
         OWNED BY Student.id;
+    
+    CREATE TABLE Preference (
+                                id preference_id,
+                                dormitory varchar(50) not null,
+                                room varchar(50) not null,
+                                student_name varchar(50) not null references Student(name),
+                                primary key(id)
+    );
+    
+    CREATE SEQUENCE preference_id
+        START 1
+    INCREMENT 1
+    OWNED BY Preference.id;
 ---
 # tag::deployment[]
 apiVersion: apps/v1
