--- a/students/src/main/java/io/openliberty/deepdive/rest/postgres/postgres.yaml
+++ b/students/src/main/java/io/openliberty/deepdive/rest/postgres/postgres.yaml
@@ -12,7 +12,7 @@ data:
     CREATE TABLE Student (
                             id SERIAL,
                             name varchar(50),
-                            email varchar(50),
+                            username varchar(50),
                             grade varchar(50),
                             dormitory varchar(50),
                             room varchar(50),
