--- a/students/src/main/java/io/openliberty/deepdive/rest/postgres/postgres.yaml
+++ b/students/src/main/java/io/openliberty/deepdive/rest/postgres/postgres.yaml
@@ -28,12 +28,12 @@ data:
                                 id preference_id,
                                 dormitory varchar(50) not null,
                                 room varchar(50) not null,
-                                student_name varchar(50) not null references Student(name),
+                                student_name varchar(50) not null,
                                 primary key(id)
     );
-    
+  
     CREATE SEQUENCE preference_id
-        START 1
+    START 1
     INCREMENT 1
     OWNED BY Preference.id;
 ---
